# asialpaca

./: .gitignore  CMakeLists.txt
cmake_modules/: FindASICamera.cmake
src/: ASIAlpaca_Camera.cc  ASIAlpaca_Camera.h  helloworld.cpp
test/: connect.sh
